@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>mobi.nowtechnologies.java</groupId>
     <artifactId>server</artifactId>
-    <version>4.1.0-SNAPSHOT</version>
+    <version>5.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Now Technologies Java Server</name>
 
@@ -17,7 +17,6 @@
         <module>web</module>
         <module>shared-web</module>
         <module>track-repo</module>
-        <module>CMS</module>
         <module>uits</module>
         <module>dtos</module>
     </modules>
@@ -31,7 +30,7 @@
         <org.springframework.version>3.2.4.RELEASE</org.springframework.version>
         <org.springframework.security-version>3.1.0.RELEASE</org.springframework.security-version>
         <spring-social.version>1.0.1.RELEASE</spring-social.version>
-        <chartsnow-version>4.1.0-SNAPSHOT</chartsnow-version>
+        <chartsnow-version>5.0-SNAPSHOT</chartsnow-version>
     </properties>
 
     <profiles>
@@ -64,6 +63,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.16</version>
                         <configuration>
+                            <forkCount>0</forkCount>
+                            <argLine>-Xms800m -Xmx1024m -XX:MaxPermSize=1024m -XX:-UseSplitVerifier</argLine>
                             <includes>
                                 <include>**/*IT.java</include>
                             </includes>
@@ -133,7 +134,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.2</version>
+                <version>2.4</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
@@ -172,7 +173,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.4</version>
                 <inherited>false</inherited>
                 <executions>
                     <execution>
@@ -305,10 +306,44 @@
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.smslib</groupId>
+            <artifactId>smslib</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.smslib</groupId>
+            <artifactId>smsserver</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsmpp</groupId>
+            <artifactId>jsmpp</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>com.sentaca.spring.smpp</groupId>
+                <artifactId>spring-smpp</artifactId>
+                <version>1.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensmpp</groupId>
+                <artifactId>opensmpp-core</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensmpp</groupId>
+                <artifactId>opensmpp-sim</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensmpp</groupId>
+                <artifactId>opensmpp-client</artifactId>
+                <version>3.0.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-all</artifactId>
@@ -316,9 +351,9 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>2.4</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -383,7 +418,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test-mvc</artifactId>
-                <version>1.0.0.BUILD-SNAPSHOT</version>
+                <version>1.0.0.M2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -690,7 +725,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>1.1.1.RELEASE</version>
+                <version>1.3.5.RELEASE</version>
             </dependency>
 
             <dependency>
@@ -1026,6 +1061,24 @@
                 <version>2.8.4</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.smslib</groupId>
+                <artifactId>smslib</artifactId>
+                <version>3.5.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.smslib</groupId>
+                <artifactId>smsserver</artifactId>
+                <version>3.5.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jsmpp</groupId>
+                <artifactId>jsmpp</artifactId>
+                <version>2.1.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -1086,6 +1139,16 @@
         <repository>
             <id>libs-snapshot</id>
             <url>http://nexus.musicqubed.com/content/repositories/libs-snapshot/</url>
+        </repository>
+
+        <repository>
+            <id>snapshots</id>
+            <url>http://repo.sentaca.com/content/repositories/snapshots/</url>
+        </repository>
+
+        <repository>
+            <id>public</id>
+            <url>http://repo.sentaca.com/content/repositories/releases/</url>
         </repository>
 
     </repositories>
